------------------------------------------
RTDebugLib - Runtime Debugging C++ Library
------------------------------------------
// vim:set ts=2 nowrap:

$Id$
$URL$

2007-03-07  Jens Langner <Jens.Langner@light-speed.de>

   * CRTDebug.c: exchanged the colors for DEBUG and REPORT output. DEBUG
     output should now be green and reports be outputted in purple instead.

2006-11-30  Jens Langner <Jens.Langner@light-speed.de>

	* CRTDebug.c: Now the time calculations should finally be correct. I
     really can't believe how easy it is/was to mix up milli with micro :)
	* CRTDebug.c: fixed the STARTCLOCK()/STOPCLOCK() functionality as it was
	  outputting incorrect time values which where quiet confusing.

2006-09-08  Jens Langner <Jens.Langner@light-speed.de>

	* examples: added new examples directory for preparing some small, minor
		examples on how to use rtdebug within own projects.

#### 2.0 RELEASE ##########################################################

2006-08-28  Jens Langner <Jens.Langner@light-speed.de>

	* CRTDebug.cpp,h: moved all private data into an internal-only private
		inline class "CRTDebugPrivate" which we might enhance in future
		without having to expose it to the public.

2006-08-25  Jens Langner <Jens.Langner@light-speed.de>

	* misc: version bump due to changed library interface
	* CRTDebug.cpp: we use GetTickCount() on systems not supporting
		gettimeofday().

2006-08-18  Jens Langner <Jens.Langner@light-speed.de>

	* CRTDebug.cpp: in case no pthread library is found librtdebug will
		now be compiled in "single-threaded" mode instead of refusing to
		compile at all.
	* misc: reworked the whole debugging interface to load its debugging
	  classes/flags via a user-defineable ENV variable. In addition, a
		filename matching facility has been added to make it also possible
		to specify a string pattern which, in case it matches, will
		suppress/show the debugging output in question.